<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="7KA-Mh-G0K">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email address" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="wJ4-KL-she">
                                <rect key="frame" x="23" y="79" width="331" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Reset">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Riding Mechanic" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AOh-mc-Xxl">
                                <rect key="frame" x="100" y="63" width="164" height="47"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="login:" destination="4b0-oT-a2k" eventType="touchUpInside" id="z1o-AC-sGh"/>
...
                                <rect key="frame" x="133" y="422" width="98" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Register"/>
                                <connections>
                                    <segue destination="4cP-2M-Pam" kind="show" id="gAy-8V-F4d"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="KUR-qz-BIl">
                                <rect key="frame" x="44" y="275" width="277" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <rect key="frame" x="44" y="323" width="282" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                <color key="textColor" red="1" green="0.42997095470000002" blue="0.2364157707" alpha="0.80259018459999998" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
...
                                <rect key="frame" x="325" y="280" width="20" height="20"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" image="Help"/>
                                <connections>
                                    <segue destination="2e0-aw-Uk2" kind="show" id="yWg-v6-QdM"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <state key="normal" title="Start Trip"/>
                                <connections>
                                    <action selector="startTrip:" destination="04g-ko-6Kf" eventType="touchUpInside" id="Jwb-mM-pYc"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Trip Information" id="gEo-hI-N1t">
                        <barButtonItem key="rightBarButtonItem" title="Stop" id="J49-f6-lj5">
                            <connections>
                                <action selector="goBackCarModelView:" destination="pvF-4x-MRG" id="EDd-Uj-29K"/>
...
                                <color key="backgroundColor" red="0.31907409883063997" green="0.58024331279472408" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Rediagnosis">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Unit" id="Q0p-Uo-iAb"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="CSw-rU-gQ5" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="About" id="SfS-OO-5M9"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="kNv-IA-Cma" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Connectivity" id="RVg-8s-ez1"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="zrP-7T-T7S" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Vehicle" id="f6K-uW-uIT"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="uN0-zs-kxC" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <color key="backgroundColor" red="1" green="0.51692873149999996" blue="0.54944092310000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
