...
    [formatter setDateFormat:@"YYYY-MM-dd hh:mm"];
    NSString *DateTime = [formatter stringFromDate:date];
    NSUserDefaults *dictionary=[NSUserDefaults standardUserDefaults];
    [dictionary setValue:DateTime forKey:@"StartDateTime"];// store start date time
    
    
    self.alertController = [UIAlertController alertControllerWithTitle: @"Do you want to store trip information?" message: @"" preferredStyle: UIAlertControllerStyleAlert];
    [self.alertController addAction: [UIAlertAction actionWithTitle: @"YES" style: UIAlertActionStyleDefault handler:^(UIAlertAction *action){
        if([self.alertController.title isEqualToString:@"Do you want to store trip information?"]){
            [self writeDataToPlist];//stop recording and store trip information into plist
            
            [self.navigationController popViewControllerAnimated:YES];
        }
...
        if(indexPath.row==0){
            detailLabel.text =@"Driving Time";
            dataLabel.text=[[NSNumber numberWithInteger:self.drivingTime] stringValue];
            unitLabel.text=@"s";
        }else if(indexPath.row==1){
            [self getDrivingDistance]; //get driving distance
            detailLabel.text =@"Driving Distance";
            
            if([[dictionary valueForKey:@"Unit"] isEqualToString:@"0"]){//metric
                dataLabel.text=[NSString stringWithFormat:@"%.2f",self.totalDistance*1.6];
                unitLabel.text=@"km";
            }else{//imperial
                dataLabel.text=[NSString stringWithFormat:@"%.2f",self.totalDistance];
...
        }else if(indexPath.row==4){
            detailLabel.text =@"RPM";
            dataLabel.text=[dictionary valueForKey:@"RPM"];
            unitLabel.text=@"rmp";
        }else if(indexPath.row==5){
            [self getRealtimeMPG]; //get realtime MPG
            detailLabel.text =@"Realtime MPG";
            dataLabel.text=[NSString stringWithFormat:@"%.2f",self.MPG];
            unitLabel.text=@"mpg";
        }else if(indexPath.row==6){
            [self getTotalFuelConsumption]; //get total fuel consumption
            detailLabel.text =@"Total Fuel Consumption";
            dataLabel.text=[NSString stringWithFormat:@"%.2f",self.totalFuelConsumption];
            unitLabel.text=@"gal";
        }else if(indexPath.row==7){
            [self getAverageMPG]; //get average MPG
            detailLabel.text =@"AverageMPG";
            dataLabel.text=[NSString stringWithFormat:@"%.2f",self.averageMPG];
            unitLabel.text=@"mpg";
        }else if(indexPath.row==8){
            [self getFuelCost];//get fuel cost
            detailLabel.text =@"Fuel Cost";
            dataLabel.text=[NSString stringWithFormat:@"%.2f",self.fuelCost];
            unitLabel.text=@"$";
        }else if(indexPath.row==9){
            detailLabel.text =@"Engine Coolant Temperature";
            NSLog(@"1111:%@",[dictionary valueForKey:@"EngineCoolantTemperature"]);
            if([[dictionary valueForKey:@"Unit"] isEqualToString:@"0"]){//metric
...
            [self getSharpAccelerationTimes]; //get sharp acceleration times
            detailLabel.text =@"Sharp Acceleration";
            dataLabel.text=[[NSNumber numberWithInteger:self.sharpAccelerationTimes] stringValue];
            unitLabel.text=@"time";
        }else if(indexPath.row==12){
            [self getSharpBrakingTimes]; //get sharp braking times
            detailLabel.text =@"Sharp Braking";
            dataLabel.text=[[NSNumber numberWithInteger:self.sharpBrakingTimes] stringValue];
            unitLabel.text=@"time";
        }

    return cell;
}
...
