...
@end

@implementation AccountTableViewController

- (void)viewDidLoad {
    [super viewDidLoad];
   self.alertController = [UIAlertController alertControllerWithTitle: @"Log Out Succeed!" message: @"" preferredStyle: UIAlertControllerStyleAlert];
    [self.alertController addAction:[UIAlertAction actionWithTitle:@"Ok" style:UIAlertActionStyleDefault handler:^(UIAlertAction *action){
         [self performSegueWithIdentifier:@"logOut" sender:nil];
    }]];
}

- (void)didReceiveMemoryWarning {
    [super didReceiveMemoryWarning];
...
